--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
@@ -19,11 +21,14 @@
     "react-native": "0.74.4",
     "react-native-agora": "^4.3.2",
     "react-native-audio-recorder-player": "^3.6.10",
-    "react-native-gesture-handler": "^2.18.1",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-image-picker": "^7.1.2",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "^6.4.1",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.33.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
